--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     }
 
     body {
-      background-image: url("https://source.unsplash.com/1600x900/?nature,water");
+      background-image: url("/iptime.png");
       animation: bg-animation 50s linear infinite;
     }
 
