--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     }
 
     body {
-      background-image: url("/iptime.png");
+      background-image: url("/IPTIME.png");
       animation: bg-animation 50s linear infinite;
     }
 
