--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </style>
   </head>
 <body class="bg-cover bg-center blur py-4">
-  <div class="max-w-sm mx-auto py-4 bg-white rounded-lg shadow-md overflow-hidden bg-opacity-60">
+  <div class="max-w-lg mx-auto py-4 bg-white rounded-lg shadow-md overflow-hidden bg-opacity-60">
     <div class="flex flex-col items-center justify-center px-6 py-4">
       <img class="h-24 w-24 rounded-full object-cover" src="https://source.unsplash.com/50x50/?profilepicture" alt="프로필 사진">
       <h2 class="mt-2 text-lg font-semibold text-gray-900">IT 테크 생정</h2>
