--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <i class="fab fa-instagram"></i>
         <span class="grow w-full px-4 text-center">링크 버튼 3</span>
       </a>
-      <a href="#" class="inline-block w-full px-4 py-2 mb-2 h-12 font-medium leading-5 text-center text-white uppercase transition bg-blue-500 rounded-none shadow-md hover:bg-blue-600 focus:outline-none focus:shadow-outline-blue active:bg-blue-600 flex items-center">
+      <a href="https://www.instagram.com/thummmb_95/" class="inline-block w-full px-4 py-2 mb-2 h-12 font-medium leading-5 text-center text-white uppercase transition bg-blue-500 rounded-none shadow-md hover:bg-blue-600 focus:outline-none focus:shadow-outline-blue active:bg-blue-600 flex items-center">
         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 15 15"><path fill="none" stroke="currentColor" d="M11 3.5h1M4.5.5h6a4 4 0 0 1 4 4v6a4 4 0 0 1-4 4h-6a4 4 0 0 1-4-4v-6a4 4 0 0 1 4-4Zm3 10a3 3 0 1 1 0-6a3 3 0 0 1 0 6Z"/></svg>
         <span class="grow w-full px-4 text-center">인스타그램</span>
       </a>
